<?xml version="1.0" encoding="utf-8"?><!--
  ~ Der Bund ePaper Downloader - App to download ePaper issues of the Der Bund newspaper
  ~ Copyright (C) 2013 Adrian Gygax
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see {http://www.gnu.org/licenses/}.
  -->

<resources>

    <!-- Per flavour -->
    <string name="app_name">Der Bund ePaper</string>
    <string name="file_provider_authority">com.github.notizklotz.derbunddownloader</string>

    <string name="epaper_api_domain">epaper.derbund.ch</string>
    <string name="epaper_api_defid">46</string>
    <string name="issue_title">Der Bund</string>
    <string name="pw_request_url">https://abo.derbund.ch/tamstorefront/login/pw/request</string>
    <string name="registration_url">https://abo.derbund.ch/tamstorefront/activate</string>

    <!-- other -->
    <string name="navigation_drawer_open">Navigation öffnen</string>
    <string name="navigation_drawer_close">Navigation schliessen</string>

    <string name="action_settings">Einstellungen</string>
    <string name="action_download">Herunterladen</string>
    <string name="auto_download">Automatisch täglich herunterladen</string>
    <string name="einstellungen">Einstellungen</string>
    <string name="error_no_issue_on_sundays">Die Zeitung erscheint Sonntags nicht!</string>
    <string name="downloading">Lade Ausgabe herunter</string>
    <string name="error_issue_not_available">Die Ausgabe steht (noch) nicht zur Verfügung</string>
    <string name="no_issues_downloaded">Keine Ausgaben heruntergeladen</string>
    <string name="issue">Zeitungsausgabe</string>
    <string name="download_state_unknown">Unbekannt</string>
    <string name="download_state_successful">Heruntergeladen</string>
    <string name="download_state_pending">Warte auf Netzwerkverbindung…</string>
    <string name="download_state_running">Lade herunter…</string>
    <string name="download_state_failed">Fehler beim Herunterladen</string>
    <string name="no_pdf_reader">Bitte installieren Sie einen PDF Reader</string>
    <string name="download_login_failed">ePaper Login fehlgeschlagen</string>
    <string name="download_login_failed_text">Ihre Benutzerdaten sind nicht gültig</string>
    <string name="issue_already_downloaded_text">Diese Ausgabe wurde bereits heruntergeladen</string>
    <string name="download_connection_failed_no_wifi_text">WLAN war nicht eingeschaltet. Die Zeitung wurde nicht heruntergeladen.</string>
    <string name="download_connection_failed">Verbindung fehlgeschlagen</string>
    <string name="download_connection_failed_text">Es konnte keine Verbindung zu den Servern hergestellt werden.</string>
    <string name="download_completed">Download Abgeschlossen</string>
    <string name="last_wakeup">Zuletzt aufgewacht</string>
    <string name="last_wakeup_never">Nie</string>
    <string name="download_service_error">Fehler beim Herunterladen</string>
    <string name="wifi_only">Nur über WLAN herunterladen</string>
    <string name="wifi_only_summary">Verhindert das Herunterladen über die Mobilfunkverbindung. Eine Ausgabe der Zeitung ist ca. 10MB gross.</string>
    <string name="delete">Entfernen</string>
    <string name="action_delete_all">Alle entfernen</string>
    <string name="debugging">Informationen</string>
    <string name="issue_deleted">Ausgabe entfernt: </string>
    <string name="request_pw">Zugangsdaten vergessen</string>
    <string name="register">ePaper freischalten</string>

    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Passwort</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_incorrect_password">Die Zugangsdaten sind nicht korrekt</string>
    <string name="error_field_required">Dieses Feld darf nicht leer sein</string>
    <string name="zeitungen">Zeitungen</string>
    <string name="klicken_um_einzuloggen">Klicken um einzuloggen</string>

    <string name="logo">Logo</string>
    <string name="tagi_teaser">Den ePaper Downloader gibt\'s jetzt auch für den Zürcher Tagesanzeiger!</string>
    <string name="tryit">Ausprobieren</string>
    <string name="ignoreit">Mir egal</string>
    <string name="change_logindata">Zugangsdaten ändern</string>

</resources>
